--- a/package.json
+++ b/package.json
@@ -1,22 +1,27 @@
 {
-  "name": "movie_backend",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@auth/mongodb-adapter": "^3.4.1",
-    "axios": "^1.7.2",
-    "mongodb": "^6.7.0",
-    "mongoose": "^8.4.4",
-    "next": "14.2.4",
-    "next-auth": "^4.24.7",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-icons": "^5.2.1"
-  }
+    "name": "movie_backend",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@auth/mongodb-adapter": "^3.4.1",
+        "axios": "^1.7.2",
+        "mongodb": "^6.7.0",
+        "mongoose": "^8.4.4",
+        "next": "14.2.4",
+        "next-auth": "^4.24.7",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-icons": "^5.2.1"
+    },
+    "devDependencies": {
+        "autoprefixer": "^10.4.19",
+        "postcss": "^8.4.38",
+        "tailwindcss": "^3.4.4"
+    }
 }
